@@ -38,7 +38,21 @@ class Ingo_Storage_Forward extends Ingo_Storage_Rule
      */
     public function setForwardAddresses($data)
     {
-        $this->_addr = $this->_addressList($data);
+        $addr = $this->_addressList($data);
+        $max = $injector->getInstance('Horde_Core_Perms')->hasAppPermission(Ingo_Perms::getPerm('max_forward'));
+
+        if (($max !== true) && !empty($max)) {
+            $addr_count = count($addr);
+            if ($addr_count > $max) {
+                throw new Ingo_Exception(sprintf(
+                    _("Maximum number of forward addresses exceeded (Total addresses: %s, Maximum addresses: %s)."),
+                    $addr_count,
+                    $max
+                ));
+            }
+        }
+
+        $this->_addr = $addr;
     }
 
     /**
