@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [mms] Add &apos;max_forward&apos; permission (Request #10332).
 * [mms] Permissions can now be applied per backend, rather than globally.
 * [mms] Replace max blacklist/whitelist configuration parameters with equivalent permissions options.
 * [mms] Sorting of rules now done via drag/drop javascript (Request #1993).
