@@ -2,6 +2,7 @@
 v3.2.0-git
 ----------
 
+[mms] Add 'max_forward' permission (Request #10332).
 [mms] Permissions can now be applied per backend, rather than globally.
 [mms] Replace max blacklist/whitelist configuration parameters with equivalent
       permissions options.
